# reqcap

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: .reqcap.yaml  README.md
examples/snapshots/: baseline.json
examples/templates/: auth-bearer.yaml  get-ip.yaml  get-with-origin.yaml  post-data.yaml  status-check.yaml
reqcap/: LICENSE  __init__.py  __main__.py  cli.py  core.py  executor.py  filters.py
reqcap/skill_data/: SKILL.md
reqcap/skill_data/references/: templates.md
templates/: create-user.yaml  get-user.yaml  health.yaml  list-users.yaml  login.yaml
tests/: conftest.py  test_assert.py  test_cli.py  test_cli_chaining.py  test_cli_direct_mode.py  test_cli_template_mode.py  test_config_resolution.py  test_filters.py  test_form.py  test_init.py  test_install_skill.py  test_list_templates_format.py  test_resource_resolution.py  test_snapshots.py  test_template_deps.py  test_template_resolution.py  test_template_snapshot.py
