[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reqcap"
dynamic = ["version"]
description = "Minimal curl wrapper for AI agents - test APIs with filtered, token-efficient output"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Aleksey Tsaplin"}]
keywords = ["http", "cli", "api", "ai-agents", "curl", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/atsaplin/reqcap"
Repository = "https://github.com/atsaplin/reqcap"
Issues = "https://github.com/atsaplin/reqcap/issues"

[project.scripts]
reqcap = "reqcap.cli:main"

[tool.setuptools.package-data]
reqcap = ["skill_data/**"]

[tool.setuptools.packages.find]
include = ["reqcap*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8",
]

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.ruff]
target-version = "py310"
line-length = 99
exclude = ["build/"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "SIM108", # ternary operator — often less readable
]

[tool.ruff.lint.isort]
known-first-party = ["reqcap"]

[tool.ruff.format]
quote-style = "double"
